terraform/alb.tf
# Application Load Balancer
resource "aws_lb" "app_alb" {
  name               = "taskapp-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]

  tags = {
    Name = "TaskApp-ALB"
  }
}

# Target Group (Aponta para o Node.js na porta 8080)
resource "aws_lb_target_group" "app_tg" {
  name     = "taskapp-tg"
  port     = 8080
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/health"
    healthy_threshold   = 2
    unhealthy_threshold = 5
    timeout             = 5
    interval            = 10
    matcher             = "200"
  }

  tags = {
    Name = "TaskApp-TG"
  }
}

# Listener do Load Balancer (Recebe na porta 80 e encaminha pro Target Group)
resource "aws_lb_listener" "app_listener" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
